[project]
name = "matching-service"
version = "0.1.1"
description = "A matching service for the UofG SPA app"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "amply==0.1.6",
    "docutils==0.20.1",
    "fastapi[standard]>=0.115.5",
    "numpy==1.25.0",
    "pulp==2.7.0",
    "pyparsing==3.1.1",
    "uvicorn"
]
